tests/snapshots/diagnostics__diagnostic_inherited_init_missing_param.snap
---
source: tests/diagnostics.rs
expression: "format!(\"Message: {}\\nSeverity: {:?}\\nCode: '{}'\", diag.message,\ndiag.severity.unwrap(), extract_code(diag))"
---
Message: Missing required parameter 'name' for '__init__'
Severity: Error
Code: 'missing-parameter'
