tests/snapshots/diagnostics__diagnostic_inherited_init_unknown_param.snap
---
source: tests/diagnostics.rs
expression: "format!(\"Message: {}\\nSeverity: {:?}\\nCode: '{}'\", diag.message,\ndiag.severity.unwrap(), extract_code(diag))"
---
Message: Unknown parameter 'unknown_param' for '__init__'
Severity: Error
Code: 'unknown-argument'
