tests/snapshots/diagnostics__diagnostic_invalid_format.snap
---
source: tests/diagnostics.rs
expression: "format!(\"Message: {}\\nCode: '{}'\", diag.message, extract_code(diag))"
---
Message: Invalid _target_ format: 'InvalidTarget'. Expected format: 'module.path.SymbolName'
Code: 'invalid-hydra-parameter'
