tests/snapshots/diagnostics__diagnostic_module_not_found.snap
---
source: tests/diagnostics.rs
expression: "format!(\"Message: {}\\nCode: '{}'\", diag.message, extract_code(diag))"
---
Message: Could not resolve module: 'nonexistent.module' (tried 2 search paths)
Code: 'module-not-found'
