tests/snapshots/diagnostics__diagnostic_symbol_not_found.snap
---
source: tests/diagnostics.rs
expression: "format!(\"Message: {}\\nCode: '{}'\", diag.message, extract_code(diag))"
---
Message: Symbol 'NonExistentClass' not found in module 'my_module'
Code: 'unresolved-reference'
