tests/snapshots/diagnostics__diagnostics_missing_params.snap
---
source: tests/diagnostics.rs
expression: diagnostic_summary
---
- "Line 4, Col 0-10: Missing required parameter 'batch_size' for __init__ (severity: Error, code: 'missing-parameter')"
- "Line 9, Col 0-10: Missing required parameter 'output_dim' for create_model (severity: Error, code: 'missing-parameter')"
- "Line 16, Col 0-13: Unknown parameter 'unknown_param' for __init__ (severity: Error, code: 'unknown-parameter')"
