tests/snapshots/diagnostics__diagnostics_multiple_errors.snap
---
source: tests/diagnostics.rs
expression: diagnostic_summary
---
- "Line 4, Col 12-32: Missing required parameter 'batch_size' for '__init__' (severity: Error, code: 'missing-argument')"
- "Line 9, Col 12-34: Missing required parameter 'output_dim' for 'create_model' (severity: Error, code: 'missing-argument')"
- "Line 18, Col 2-15: Unknown parameter 'unknown_param' for '__init__' (severity: Error, code: 'unknown-argument')"
